--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
 </head>
 
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="heading1">Discover hidden places in the world around you</h1>
+    <p>
+        <a class="para1">Download Excursion (Coming soon!)</a>
+    </p>
+    <video autoplay muted loop>
+        <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+            type="video/mp4">
+    </video>
+    <h2 class="heading2">Your personal travel guide</h2>
+    <p class="para2">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src='resources/images/camp.jpeg' />
+    <img id='phone icon' src="resources/images/phone.png" />
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p>
+        <a class="para1">Download Excursion (Coming soon!)</a>
+    </p>
 </body>
