--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
             type="video/mp4">
     </video>
     <h2 class="heading2">Your personal travel guide</h2>
-    <p class="para2">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src='resources/images/camp.jpeg' />
-    <img id='phone icon' src="resources/images/phone.png" />
+    <p>
+        <img id='phone icon' src="resources/images/phone.png" />
+    </p>
+
     <h1>Coming Soon for iPhone and Android</h1>
     <p>
         <a class="para1">Download Excursion (Coming soon!)</a>
     </p>
+    <div class="footer">
+        <p>© Excursion</p>
+    </div>
 </body>
